fieldx/tests/uncompilable/1.77+serde,sync,async/serialize_off.stderr
warning: unused import: `Serialize`
 --> tests/uncompilable/serialize_off.rs
  |
  | use serde::{Deserialize, Serialize};
  |                          ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `Foo: Serialize` is not satisfied
 --> tests/uncompilable/serialize_off.rs
  |
  |     let _json = serde_json::to_string(&foo);
  |                 --------------------- ^^^^ the trait `Serialize` is not implemented for `Foo`
  |                 |
  |                 required by a bound introduced by this call
  |
  = help: the following other types implement trait `Serialize`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
note: required by a bound in `serde_json::to_string`
 --> $CARGO/serde_json-1.0.135/src/ser.rs
  |
  | pub fn to_string<T>(value: &T) -> Result<String>
  |        --------- required by a bound in this function
  | where
  |     T: ?Sized + Serialize,
  |                 ^^^^^^^^^ required by this bound in `to_string`
